--- a/templates/quack/new.html.twig
+++ b/templates/quack/new.html.twig
@@ -7,5 +7,5 @@
 
     {{ include('quack/_form.html.twig') }}
 
-    <a href="{{ path('quack_index') }}">back to list</a>
+    <a class="btn-success" href="{{ path('quack_index') }}">back to list</a>
 {% endblock %}
