--- a/templates/duck_duck/index.html.twig
+++ b/templates/duck_duck/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container">
-    <h1>DuckDuck index</h1>
+        <h1>DuckDuck Index</h1>
 
         <table class="table">
             <thead>
@@ -28,8 +28,8 @@
                     <td>{{ duck_duck.email }}</td>
                     <td>{{ duck_duck.password }}</td>
                     <td>
-                        <a href="{{ path('duck_duck_show', {'id': duck_duck.id}) }}">show</a>
-                        <a href="{{ path('duck_duck_edit', {'id': duck_duck.id}) }}">edit</a>
+                        <a class="btn-success" href="{{ path('duck_duck_show', {'id': duck_duck.id}) }}">show</a><br>
+                        <a class="btn-success" href="{{ path('duck_duck_edit', {'id': duck_duck.id}) }}">edit</a><br>
                     </td>
                 </tr>
             {% else %}
@@ -39,6 +39,6 @@
             {% endfor %}
             </tbody>
         </table>
+        <a class="btn btn-success" href="{{ path('duck_duck_new') }}">Create new</a>
     </div>
-    <a href="{{ path('duck_duck_new') }}">Create new</a>
 {% endblock %}
