--- a/templates/quack/edit.html.twig
+++ b/templates/quack/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Quack{% endblock %}
 
 {% block body %}
-    <h1>Edit Quack</h1>
+    <h1 class="text-center">Edit Quack</h1>
 
     {{ include('quack/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('quack_index') }}">back to list</a>
+    <a class="btn btn-success" href="{{ path('quack_index') }}">back to list</a>
 
     {{ include('quack/_delete_form.html.twig') }}
 {% endblock %}
