--- a/templates/quack/show.html.twig
+++ b/templates/quack/show.html.twig
@@ -22,9 +22,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('quack_index') }}">back to list</a>
+    <a class="btn btn-success" href="{{ path('quack_index') }}">back to list</a>
 
-    <a href="{{ path('quack_edit', {'id': quack.id}) }}">edit</a>
+    <a class="btn btn-success" href="{{ path('quack_edit', {'id': quack.id}) }}">edit</a>
 
     {{ include('quack/_delete_form.html.twig') }}
 {% endblock %}
