--- a/templates/duck_duck/show.html.twig
+++ b/templates/duck_duck/show.html.twig
@@ -33,10 +33,10 @@
             </tr>
         </tbody>
     </table>
-
-    <a href="{{ path('duck_duck_index') }}">back to list</a>
-
-    <a href="{{ path('duck_duck_edit', {'id': duck_duck.id}) }}">edit</a>
+    {% if is_granted('ROLE_ADMIN') %}
+    <a class=" btn btn-success" href="{{ path('duck_duck_index') }}">back to list</a>
+    {% endif %}
+    <a class=" btn btn-success" href="{{ path('duck_duck_edit', {'id': duck_duck.id}) }}">edit</a>
 
     {{ include('duck_duck/_delete_form.html.twig') }}
 {% endblock %}
