--- a/templates/quack/show.html.twig
+++ b/templates/quack/show.html.twig
@@ -7,24 +7,38 @@
 
     <table class="table">
         <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ quack.id }}</td>
-            </tr>
-            <tr>
-                <th>Content</th>
-                <td>{{ quack.content }}</td>
-            </tr>
-            <tr>
-                <th>CreatedAt</th>
-                <td>{{ quack.createdAt ? quack.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-            </tr>
+        <tr>
+            <th>Id</th>
+            <td>{{ quack.id }}</td>
+        </tr>
+        <tr>
+            <th>Content</th>
+            <td>{{ quack.content }}</td>
+        </tr>
+        <tr>
+            <th>CreatedAt</th>
+            <td>{{ quack.createdAt ? quack.createdAt|date('Y-m-d H:i:s') : '' }}</td>
+        </tr>
+        <tr>
+            <th>Author</th>
+            <td>{{ quack.author }}</td>
+        </tr>
+        <tr>
+            <th>Image</th>
+            <td>{{ quack.image }}</td>
+        </tr>
+        <tr>
+            <th>Tags</th>
+            <td>{{ quack.tags }}</td>
+        </tr>
         </tbody>
     </table>
 
     <a class="btn btn-success" href="{{ path('quack_index') }}">back to list</a>
 
+    {% if is_granted('ROLE_USER') and is_granted('quack_edit', quack ) %}
     <a class="btn btn-success" href="{{ path('quack_edit', {'id': quack.id}) }}">edit</a>
 
     {{ include('quack/_delete_form.html.twig') }}
+    {% endif %}
 {% endblock %}
