--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -38,6 +38,9 @@
                 <button class="btn btn-lg btn-primary" type="submit">
                     Sign in
                 </button>
+                <a class="btn btn-lg btn-primary" href="\register">
+                    Register
+                </a>
             </div>
         </div>
     </form>
