--- a/templates/quack/show.html.twig
+++ b/templates/quack/show.html.twig
@@ -21,7 +21,7 @@
         </tr>
         <tr>
             <th>Author</th>
-            <td>{{ quack.author }}</td>
+            <td>{{ quack.author.duckname }}</td>
         </tr>
         <tr>
             <th>Image</th>
