--- a/templates/duck_duck/new.html.twig
+++ b/templates/duck_duck/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New DuckDuck{% endblock %}
 
 {% block body %}
+    <div class="container">
     <h1>Create new DuckDuck</h1>
 
     {{ include('duck_duck/_form.html.twig') }}
 
     <a href="{{ path('duck_duck_index') }}">back to list</a>
+    </div>
 {% endblock %}
