--- a/templates/quack/new.html.twig
+++ b/templates/quack/new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Quack{% endblock %}
 
 {% block body %}
+    <div class="container">
     <h1>Create new Quack</h1>
 
     {{ include('quack/_form.html.twig') }}
 
     <a class="btn-success" href="{{ path('quack_index') }}">back to list</a>
+    </div>
 {% endblock %}
