--- a/templates/quack/new.html.twig
+++ b/templates/quack/new.html.twig
@@ -4,8 +4,11 @@
 
 {% block body %}
     <div class="container">
+        {% if parent is not null %}
+            <h1>Create new Comment</h1>
+        {% elseif parent is null %}
     <h1>Create new Quack</h1>
-
+        {% endif %}
     {{ include('quack/_form.html.twig') }}
 
     <a class="btn-success" href="{{ path('quack_index') }}">back to list</a>
