--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -11,6 +11,7 @@
         {{ form_row(registrationForm.lastname) }}
         {{ form_row(registrationForm.duckname) }}
         {{ form_row(registrationForm.email) }}
+        {{ form_row(registrationForm.imageFile) }}
         {{ form_row(registrationForm.plainPassword) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
