--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,6 +27,10 @@
                 </li>
                 {% endif %}
             </ul>
+            <form class="form-inline my-2 my-lg-0" method="get" action="{{ path('quack_search') }}">
+                <input class="form-control mr-sm-2" type="search" name="mysearch" placeholder="Search" aria-label="Search">
+                <button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
+            </form>
         </div>
     </nav>
         {% block body %}{% endblock %}
