--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">{% endblock %}
-    </head>
-    <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="collapse navbar-collapse" id="navbarText">
+<head>
+    <meta charset="UTF-8">
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    {% block stylesheets %}
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+              crossorigin="anonymous">{% endblock %}
+</head>
+<body>
+
+<nav class="navbar navbar-dark navbar-expand-md justify-content-between" style="background-color: lightslategray;">
+    <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-nav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="navbar-collapse collapse dual-nav w-50 order-1 order-md-0">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
                     <a class="nav-link" href="/quack">Quack <span class="sr-only">(current)</span></a>
@@ -19,24 +27,44 @@
                     <a class="nav-link" href="/">Login</a>
                 </li>
                 {% if is_granted('ROLE_USER') %}
-                <li class="nav-item">
-                    <a class="nav-link" href="/logout">Logout</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('duck_duck_edit', {'id': app.user.id}) }}">Mon Compte</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('duck_duck_edit', {'id': app.user.id}) }}">Mon Compte</a>
+                    </li>
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="/duckduck">Duck list</a>
+                        </li>
+                    {% endif %}
                 {% endif %}
             </ul>
-            <form class="form-inline my-2 my-lg-0" method="get" action="{{ path('quack_search') }}">
-                <input class="form-control mr-sm-2" type="search" name="mysearch" placeholder="Search" aria-label="Search">
-                <button class="btn btn-info my-2 my-sm-0" type="submit">Search</button>
+        </div>
+        <a href="/quack" class="navbar-brand mx-auto d-block text-center order-0 order-md-1 w-25"
+           style="color: white; font-size: 50px; font-weight: bold">Quack Net</a>
+        <div class="navbar-collapse collapse dual-nav w-50 order-2">
+
+            <form class="form-inline my-2 my-lg-0 ml-auto" method="get" action="{{ path('quack_search') }}">
+                <input class="form-control mr-sm-2" type="search" name="mysearch" placeholder="Search"
+                       aria-label="Search">
+                <button class="btn btn-warning my-2 my-sm-0" type="submit">Search</button>
             </form>
         </div>
-    </nav>
-        {% block body %}{% endblock %}
-        {% block javascripts %}<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>{% endblock %}
+    </div>
+</nav>
 
-    </body>
+{% block body %}{% endblock %}
+{% block javascripts %}
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+            integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+            integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+            crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+            integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+            crossorigin="anonymous"></script>{% endblock %}
+
+</body>
 </html>
