--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -15,7 +15,7 @@
         {{ form_row(registrationForm.plainPassword) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button class="btn btn-success">Register</button>
+        <button class="btn btn-warning">Register</button>
     {{ form_end(registrationForm) }}
     </div>
 {% endblock %}
