--- a/templates/duck_duck/edit.html.twig
+++ b/templates/duck_duck/edit.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="container">
-        <h1 class="text-center">Edit DuckDuck</h1><br>
+        <h1 class="text-center" style="font-weight: bold; color: darkorange">Edit DuckDuck</h1><br>
         <img style="border-radius:50%; border:2px solid darkgray"  width="100" height="100" src="{{ duck_duck.image }} ">
 
 
