--- a/templates/quack/edit.html.twig
+++ b/templates/quack/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('quack/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a class="btn btn-success" href="{{ path('quack_index') }}">back to list</a>
+    <a class="btn btn-warning" href="{{ path('quack_index') }}">back to list</a>
 
     {{ include('quack/_delete_form.html.twig') }}
 {% endblock %}
