--- a/templates/quack/index.html.twig
+++ b/templates/quack/index.html.twig
@@ -3,11 +3,10 @@
 {% block title %}Quack index{% endblock %}
 
 {% block body %}
-    <div style="background: darkorange">
-    <div class="container" >
-        <h1 class="text-center" style="color: white; font-weight: bold">QuackNet</h1>
+    <div style="background: lightyellow">
+    <div class="container" style="" >
         <div>
-        <img class="mx-auto mb-4 d-block" width="300" height="200" src="{{ asset('images/975f88ac43930b799092277eafdea175.gif') }}">
+        <img class="mx-auto mb-4 d-block" width="300" height="200" src="{{ asset('images/4bf643a35c66d6b11d4c3eff3ff60288.png') }}">
         </div>
         {% for label, messages in app.flashes %}
             {% for message in messages %}
@@ -18,11 +17,11 @@
         {% endfor %}
 
         {% for quack in quacks %}
-            <div class="card card-body mb-3" style="border-radius: 0.9% !important;">
+            <div class="card card-body mb-3 " style="border-radius: 0.9% !important;">
                 <div class="card-header" style="background-color: darkgray !important;">
                     <img style="border-radius:50%" width="100" height="100" src="{{ quack.author.image }}">
                     <p>
-                        <small class="text-muted">{{ quack.author.duckname }} à écrit le
+                        <small class="text-muted" style="color:white !important;">{{ quack.author.duckname }} à écrit le
                             {{ quack.createdAt ? quack.createdAt|date('Y-m-d H:i:s') : '' }}</small>
                     </p>
                 </div>
@@ -32,7 +31,7 @@
                 </div>
                 <img src="{{ quack.image }}" class="card-img-top">
                 <div class="card">
-                    <p> Tags :
+                    <p style="color:darkorange; font-weight: bold"> Tags :
                         {% for tag in quack.tags %}
                             <span class="badge badge-warning">{{ tag }}</span>
                         {% endfor %}
@@ -43,37 +42,40 @@
 
                     <div class="card" id="collapse_{{ quack.id }}">
                         {% for comment in quack.children %}
-                            <div class="card-header">
+                            <div class="card-header" style="background-color: lightgrey">
                                 <img style="border-radius:50%" width="50" height="50" src="{{ comment.author.image }}">
                                 <p>
-                                    <small class="text-muted">{{ comment.author.duckname }} à écrit le
+                                    <small class="text-muted">{{ comment.author.duckname }} à commenté ce post le
                                         {{ comment.createdAt ? comment.createdAt|date('Y-m-d H:i:s') : '' }}</small>
                                 </p>
                             </div>
                             <div class="card-body">
+                                <img src="{{ comment.image }}" with="120" height="120">
                                 <p style="color:darkgrey !important;">{{ comment.content }}</p>
+
                             </div>
                             <div class="card">
-                                <p> Tags :
-                                    {% for tag in quack.tags %}
-                                        <span class="badge badge-warning">{{ tag }}</span>
+                                <p style="color:darkorange; font-weight: bold;"> Tags :
+                                    {% for tag in comment.tags %}
+                                        <span class="badge badge-warning">
+                                            <i class="fa fa-comment-o" aria-hidden="true"></i>{{ tag }}</span>
                                     {% endfor %}
                                 </p>
                             </div>
                             <div class="card-footer">
-                                <a class="btn btn-success" href="{{ path('quack_show', {'id': comment.id}) }}">show</a>
+                                <a class="btn btn-warning" href="{{ path('quack_show', {'id': comment.id}) }}">show</a>
                                 {% if is_granted('quack_edit', comment) %}
-                                    <a class="btn btn-success"
+                                    <a class="btn btn-info"
                                        href="{{ path('quack_edit', {'id': comment.id}) }}">edit</a>
                                 {% endif %}
                             </div>
                         {% endfor %}
                     </div>
-                    <a class="btn btn-success" href="{{ path('quack_show', {'id': quack.id}) }}">show</a>
+                    <a class="btn btn-warning" href="{{ path('quack_show', {'id': quack.id}) }}">show</a>
                     <a class="btn btn-info" href="{{ path('quack_new_comment', {'parent': quack.id}) }}">add
                         comment</a>
                     {% if is_granted('ROLE_USER') and is_granted('quack_edit', quack ) %}
-                        <a class="btn btn-success" href="{{ path('quack_edit', {'id': quack.id}) }}">edit</a>
+                        <a class="btn btn-info" href="{{ path('quack_edit', {'id': quack.id}) }}">edit</a>
 
                     {% endif %}
                 </div>
