--- a/templates/quack/show.html.twig
+++ b/templates/quack/show.html.twig
@@ -41,10 +41,10 @@
             </tbody>
         </table>
 
-        <a class="btn btn-success" href="{{ path('quack_index') }}">back to list</a>
+        <a class="btn btn-warning" href="{{ path('quack_index') }}">back to list</a>
 
         {% if is_granted('ROLE_USER') and is_granted('quack_edit', quack ) %}
-            <a class="btn btn-success" href="{{ path('quack_edit', {'id': quack.id}) }}">edit</a>
+            <a class="btn btn-warning" href="{{ path('quack_edit', {'id': quack.id}) }}">edit</a>
 
             {{ include('quack/_delete_form.html.twig') }}
         {% endif %}
