resarch bar & nav by tag & by avatar

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <title>{% block title %}Welcome!{% endblock %}</title>
     {% block stylesheets %}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
               integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-              crossorigin="anonymous">{% endblock %}
+              crossorigin="anonymous">
+    {% endblock %}
 </head>
 <body>
-
 <nav class="navbar navbar-dark navbar-expand-md justify-content-between" style="background-color: lightslategray;">
     <div class="container-fluid">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".dual-nav">
@@ -53,8 +54,8 @@
         </div>
     </div>
 </nav>
-
-{% block body %}{% endblock %}
+{% block body %}
+{% endblock %}
 {% block javascripts %}
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
             integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -64,7 +65,7 @@
             crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-            crossorigin="anonymous"></script>{% endblock %}
-
+            crossorigin="anonymous"></script>
+{% endblock %}
 </body>
 </html>
