--- a/templates/duck_duck/index.html.twig
+++ b/templates/duck_duck/index.html.twig
@@ -3,10 +3,9 @@
 {% block title %}DuckDuck index{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <h1 style="color: darkorange; font-weight: bold">DuckDuck Index</h1>
-
-        <table class="table">
+    <div>
+        <h1 style="color: darkorange; font-weight: bold; text-align: center">DuckDuck Index</h1>
+        <table class="table col-12">
             <thead>
             <tr>
                 <th>Id</th>
