--- a/templates/quack/edit.html.twig
+++ b/templates/quack/edit.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Edit Quack{% endblock %}
 
 {% block body %}
+    <div class="container">
     <h1 class="text-center">Edit Quack</h1>
 
     {{ include('quack/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +11,5 @@
     <a class="btn btn-warning" href="{{ path('quack_index') }}">back to list</a>
 
     {{ include('quack/_delete_form.html.twig') }}
+    </div>
 {% endblock %}
