--- a/templates/quack/index.html.twig
+++ b/templates/quack/index.html.twig
@@ -4,92 +4,98 @@
 
 {% block body %}
     <div style="background: lightyellow">
-    <div class="container" style="" >
-        <div>
-        <img class="mx-auto mb-4 d-block" width="300" height="200" src="{{ asset('images/4bf643a35c66d6b11d4c3eff3ff60288.png') }}">
-        </div>
-        {% for label, messages in app.flashes %}
-            {% for message in messages %}
-                <div class="alert-{{ label }}">
-                    {{ message }}
+        <div class="container" style="">
+            <div>
+                <img class="mx-auto mb-4 d-block" width="300" height="200"
+                     src="{{ asset('images/4bf643a35c66d6b11d4c3eff3ff60288.png') }}">
+            </div>
+            {% for label, messages in app.flashes %}
+                {% for message in messages %}
+                    <div class="alert-{{ label }}">
+                        {{ message }}
+                    </div>
+                {% endfor %}
+            {% endfor %}
+            {% for quack in quacks %}
+                <div class="card card-body mb-3 " style="border-radius: 0.9% !important;">
+                    <div class="card-header" style="background-color: darkgray !important;">
+                        <a href="{{ path('duck_duck_show', {'id': quack.author.id}) }}"><img
+                                    style="border-radius:50%; background-color: white" width="100" height="100"
+                                    src="{{ quack.author.image }}"></a>
+                        <p>
+                            <i class="far fa-comment" style="color: white"></i>
+                            <small class="text-muted" style="color:white !important;"> {{ quack.author.duckname }} à
+                                écrit le
+                                {{ quack.createdAt ? quack.createdAt|date('Y-m-d H:i:s') : '' }}</small>
+                        </p>
+                    </div>
+                    <div class="card-body">
+                        <p class="card-text" style="color:darkgrey !important;">{{ quack.content }}</p>
+                    </div>
+                    <img src="{{ quack.image }}" class="card-img-top">
+                    {% if quack.tags is not null %}
+                        <div class="card" style="padding-top: 10px">
+                            <p style="color:orange; font-weight: bold; margin-left: 10px"> Tags :
+                                {% for tag in quack.tags %}
+                                    <a class="btn-sm btn-info" href="{{ path('quack_tags',{'tag': tag }) }}">
+                                        <i class="fas fa-tag" style=" margin-left: 10px"></i> {{ tag }}</a>
+                                {% endfor %}
+                            </p>
+                        </div>
+                    {% endif %}
+                    <div class="card-footer">
+                        <div class="card" id="collapse_{{ quack.id }}">
+                            {% set comment = (quack.children | last) %}
+                            {% if comment %}
+                                <div class="card-header" style="background-color: lightgrey">
+                                    <a href="{{ path('duck_duck_show', {'id': comment.author.id}) }}"><img
+                                                style="border-radius:50%; background-color: white" width="50"
+                                                height="50" src="{{ comment.author.image }}"></a>
+                                    <p>
+                                        <i class="far fa-comments" style="color: gray"></i>
+                                        <small class="text-muted"> {{ comment.author.duckname }} à commenté ce post le
+                                            {{ comment.createdAt ? comment.createdAt|date('Y-m-d H:i:s') : '' }}</small>
+                                    </p>
+                                </div>
+                                <div class="card-body">
+                                    <img src="{{ comment.image }}" with="120" height="120">
+                                    <p style="color:darkgrey !important;">{{ comment.content }}</p>
+                                </div>
+                                <div class="card" style="padding-top: 10px">
+                                    <p style="color:orange; font-weight: bold; margin-left: 10px"> Tags :
+                                        {% for tag in comment.tags %}
+                                            <a class="btn-sm btn-info" href="{{ path('quack_tags',{'tag': tag }) }}">
+                                                <i class="fas fa-tag" style=" margin-left: 10px"></i> {{ tag }}</a>
+                                        {% endfor %}
+                                    </p>
+                                </div>
+                                <div class="card-footer">
+                                    <a class="btn btn-warning"
+                                       href="{{ path('quack_show', {'id': comment.id}) }}">show</a>
+                                    {% if is_granted('quack_edit', comment) %}
+                                        <a class="btn btn-info"
+                                           href="{{ path('quack_edit', {'id': comment.id}) }}">edit</a>
+                                    {% endif %}
+                                </div>
+                            {% endif %}
+                        </div>
+                        <a class="btn btn-warning" href="{{ path('quack_show', {'id': quack.id}) }}">show</a>
+                        <a class="btn btn-info" href="{{ path('quack_new_comment', {'parent': quack.id}) }}">add
+                            comment</a>
+                        {% if is_granted('ROLE_USER') and is_granted('quack_edit', quack ) %}
+                            <a class="btn btn-info" href="{{ path('quack_edit', {'id': quack.id}) }}">edit</a>
+                        {% endif %}
+                    </div>
+                </div>
+            {% else %}
+                <div class="card-body">
+                    <td colspan="4">no records found</td>
                 </div>
             {% endfor %}
-        {% endfor %}
 
-        {% for quack in quacks %}
-            <div class="card card-body mb-3 " style="border-radius: 0.9% !important;">
-                <div class="card-header" style="background-color: darkgray !important;">
-                    <img style="border-radius:50%" width="100" height="100" src="{{ quack.author.image }}">
-                    <p>
-                        <small class="text-muted" style="color:white !important;">{{ quack.author.duckname }} à écrit le
-                            {{ quack.createdAt ? quack.createdAt|date('Y-m-d H:i:s') : '' }}</small>
-                    </p>
-                </div>
-                <div class="card-body">
-                    <p class="card-text" style="color:darkgrey !important;">{{ quack.content }}</p>
-
-                </div>
-                <img src="{{ quack.image }}" class="card-img-top">
-                <div class="card">
-                    <p style="color:darkorange; font-weight: bold"> Tags :
-                        {% for tag in quack.tags %}
-                            <span class="badge badge-warning">{{ tag }}</span>
-                        {% endfor %}
-                    </p>
-                </div>
-                <div class="card-footer">
-
-
-                    <div class="card" id="collapse_{{ quack.id }}">
-                        {% for comment in quack.children %}
-                            <div class="card-header" style="background-color: lightgrey">
-                                <img style="border-radius:50%" width="50" height="50" src="{{ comment.author.image }}">
-                                <p>
-                                    <small class="text-muted">{{ comment.author.duckname }} à commenté ce post le
-                                        {{ comment.createdAt ? comment.createdAt|date('Y-m-d H:i:s') : '' }}</small>
-                                </p>
-                            </div>
-                            <div class="card-body">
-                                <img src="{{ comment.image }}" with="120" height="120">
-                                <p style="color:darkgrey !important;">{{ comment.content }}</p>
-
-                            </div>
-                            <div class="card">
-                                <p style="color:darkorange; font-weight: bold;"> Tags :
-                                    {% for tag in comment.tags %}
-                                        <span class="badge badge-warning">
-                                            <i class="fa fa-comment-o" aria-hidden="true"></i>{{ tag }}</span>
-                                    {% endfor %}
-                                </p>
-                            </div>
-                            <div class="card-footer">
-                                <a class="btn btn-warning" href="{{ path('quack_show', {'id': comment.id}) }}">show</a>
-                                {% if is_granted('quack_edit', comment) %}
-                                    <a class="btn btn-info"
-                                       href="{{ path('quack_edit', {'id': comment.id}) }}">edit</a>
-                                {% endif %}
-                            </div>
-                        {% endfor %}
-                    </div>
-                    <a class="btn btn-warning" href="{{ path('quack_show', {'id': quack.id}) }}">show</a>
-                    <a class="btn btn-info" href="{{ path('quack_new_comment', {'parent': quack.id}) }}">add
-                        comment</a>
-                    {% if is_granted('ROLE_USER') and is_granted('quack_edit', quack ) %}
-                        <a class="btn btn-info" href="{{ path('quack_edit', {'id': quack.id}) }}">edit</a>
-
-                    {% endif %}
-                </div>
-            </div>
-
-        {% else %}
-            <div class="card-body">
-                <td colspan="4">no records found</td>
-            </div>
-        {% endfor %}
-
-        {% if is_granted('ROLE_USER') %}
-            <a class="btn btn-success" href="{{ path('quack_new') }}">Create new</a>
-        {% endif %}
-    </div>
+            {% if is_granted('ROLE_USER') %}
+                <a class="btn btn-success" href="{{ path('quack_new') }}">Create new</a>
+            {% endif %}
+        </div>
     </div>
 {% endblock %}
